fixed positioning of instructions and logo along with colors behind questions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,14 +20,12 @@
     font-size: 45px;
     cursor: pointer;
     text-align: center;
-    margin: auto;
-    position: absolute;
+    margin: auto;;
     width: 960px;
     height: 50px;
     color: black;
     text-shadow: none;
     border-top: 0px;
-    border: 1px solid #44aa44;
     margin-top: 120px;
 }
 #gameOver {
@@ -45,11 +43,10 @@
     text-align: center;
     margin: auto;
     margin-top: 15%;
-    position: absolute;
     width: 960px;
     height: 100px;
     color: black;
-    border: 1px dotted #44aa44;
+    
 }
 .timesUp {
     border: none;
